--- a/src/App.css
+++ b/src/App.css
@@ -1,9 +1,13 @@
 .App {
-  font-family: 'Poppins';
+  font-family: "Poppins";
   font-size: 14px;
   background-color: #1e1e1e;
   background-image: linear-gradient(to right, #00416a, #3b3c3c);
   background-size: 400% 400%;
 }
 
- 
+.card-img-top {
+  width: calc(
+    300px * (16 / 9)
+  ); /* replace 16 / 9 with the aspect ratio of your image */
+}
